# visualisa

./: README.md  pyproject.toml  test.ipynb
app/: cli_tools.py  main.py  plot_code.py  transform.py  urdf_vis.py
data/: claude.urdf  gemini.urdf
