[project]
name = "kinematic-viz"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "inquirer>=3.4.0",
    "ipykernel>=6.29.5",
    "pyside6>=6.9.1",
    "pyvista>=0.45.2",
    "pyvistaqt>=0.11.2",
    "scipy>=1.15.3",
    "tqdm>=4.67.1",
    "yourdfpy>=0.0.57",
]
